--- a/HTML GAME/index.html
+++ b/HTML GAME/index.html
@@ -5,8 +5,9 @@
     var currentPlayer = 1;
     var player1 = {name:"player1", value:"X"};
     var player2 = {name:"player2", value:"O"};
-  function select(ele) {
-      var id = ele.id;
+  
+    function select(ele) {
+      //var id = ele.getAttribute("x");
       if(currentPlayer == 1){
       document.getElementById(ele.id).innerHTML= player1.value;
           currentPlayer = 0;
@@ -16,26 +17,26 @@
           currentPlayer = 1;
       }
       
-    alert('area element id = ' + id);
+    alert('Coordinates = ' + ele.getAttribute("x") + ", " + ele.getAttribute("y"));
   }
 </script>
     </head>
 <body>
 <table>
     <tr>
-    <td><button id="2,0" onclick="select(this);"/></td>
-    <td><button id="2,1" onclick="select(this);"/></td>
-    <td><button id="2,2" onclick="select(this);"/></td>
+    <td><button x="2" y="0" id="2,0" onclick="select(this);"/></td>
+    <td><button x="2" y="1" id="2,1" onclick="select(this);"/></td>
+    <td><button x="2" y="2" id="2,2" onclick="select(this);"/></td>
     </tr>
     <tr>
-    <td><button id="1,2" onclick="select(this);"/></td>
-    <td><button id="1,1" onclick="select(this);"/></td>
-    <td><button id="1,2" onclick="select(this);"/></td>
+    <td><button x="1" y="0" id="1,0" onclick="select(this);"/></td>
+    <td><button x="1" y="1" id="1,1" onclick="select(this);"/></td>
+    <td><button x="1" y="2" id="1,2" onclick="select(this);"/></td>
     </tr>
     <tr>
-    <td><button id="0,0" onclick="select(this);"/></td>
-    <td><button id="0,1" onclick="select(this);"/></td>
-    <td><button id="0,2" onclick="select(this);"/></td>
+    <td><button x="0" y="0" id="0,0" onclick="select(this);"/></td>
+    <td><button x="0" y="1" id="0,1" onclick="select(this);"/></td>
+    <td><button x="0" y="2" id="0,2" onclick="select(this);"/></td>
     </tr>
     </table>
 
