--- a/HTML GAME/index.html
+++ b/HTML GAME/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+    
+<link rel="stylesheet" href="style.css">
+
+    
 <script>
     var currentPlayer = 1;
     var player1 = {name:"player1", value:"X"};
