--- a/HTML GAME/index.html
+++ b/HTML GAME/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
+  <title>Welcome to XOGame</title>
     
 <link rel="stylesheet" href="style.css">
+</head>
 
     
 <script>
@@ -22,8 +25,8 @@
     alert('Coordinates = ' + ele.getAttribute("x") + ", " + ele.getAttribute("y"));
   }
 </script>
-    </head>
-<body>
+
+    <body>
 <table>
     <tr>
     <td><button x="2" y="0" id="2,0" onclick="select(this);"/></td>
